--- a/kivy_ui/main.kv
+++ b/kivy_ui/main.kv
@@ -1,11 +1,128 @@
 <ControlUI>:
-    # val: [slider_H_min.value,slider_H_max.value,slider_S_min.value,slider_S_max.value,slider_V_min.value,slider_V_max.value,slider_M.value]
+    val: [min_h.value,min_s.value,min_v.value,max_h.value,max_s.value,max_v.value]
     # showBinarie: False
     cvImage: image_1
+    cvFilter: image_2
+    cvActiveBloops: switch_1
+    blob_coor: coord
     BoxLayout:
         size: root.size
         orientation: 'vertical'
-        padding: 50
+        padding: 10
+        GridLayout:
+            size_hint: (1, 0.2)
+            orientation: 'vertical'
+            cols: 3
+            rows: 2
+            BoxLayout:
+                orientation: 'horizontal'
+                Slider:
+                    id: min_h
+                    max: 255
+                    value: int(min_h_text.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        size_hint: (0.5,0.5)
+                        text: "Min H"
+                    TextInput:
+                        id: min_h_text
+                        size_hint: (0.5,1.5)
+                        text: str(int(min_h.value))
+                        multiline: False
+            BoxLayout:
+                orientation: 'horizontal'
+                Slider:
+                    id: min_s
+                    max: 255
+                    value: int(min_s_text.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        size_hint: (0.5,0.5)
+                        text: "Min S"
+                    TextInput:
+                        id: min_s_text
+                        size_hint: (0.5,1.5)
+                        text: str(int(min_s.value))
+                        multiline: False
+            BoxLayout:
+                orientation: 'horizontal'
+                Slider:
+                    id: min_v
+                    max: 255
+                    value: int(min_v_text.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        size_hint: (0.5,0.5)
+                        text: "Min V"
+                    TextInput:
+                        id: min_v_text
+                        size_hint: (0.5,1.5)
+                        text: str(int(min_v.value))
+                        multiline: False
+            BoxLayout:
+                orientation: 'horizontal'
+                Slider:
+                    id: max_h
+                    max: 255
+                    value: int(max_h_text.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        size_hint: (0.5,0.5)
+                        text: "Max H"
+                    TextInput:
+                        id: max_h_text
+                        size_hint: (0.5,1.5)
+                        text: str(int(max_h.value))
+                        multiline: False
+            BoxLayout:
+                orientation: 'horizontal'
+                Slider:
+                    id: max_s
+                    max: 255
+                    value: int(max_s_text.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        size_hint: (0.5,0.5)
+                        text: "Max S"
+                    TextInput:
+                        id: max_s_text
+                        size_hint: (0.5,1.5)
+                        text: str(int(max_s.value))
+                        multiline: False
+            BoxLayout:
+                orientation: 'horizontal'
+                Slider:
+                    id: max_v
+                    max: 255
+                    value: int(max_v_text.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    Label:
+                        size_hint: (0.5,0.5)
+                        text: "Max V"
+                    TextInput:
+                        id: max_v_text
+                        size_hint: (0.5,1.5)
+                        text: str(int(max_v.value))
+                        multiline: False
+        Switch:
+            size_hint: (0.1,0.1)
+            id: switch_1
+        BoxLayout:
+            Image:
+                id: image_1
+            Image:
+                id: image_2
+            Label:
+                id: coord
+                size_hint: 0.1,1
+                text: 'X,y'
+
         # Label:
         #     text: "Valor:"+str(slider_H_min.value)+","+str(slider_H_max.value)+","+str(slider_S_min.value)
         # Slider:
@@ -43,7 +160,5 @@
         #     max: 200
         #     value: 140
         #     on_value: slider_M.value = self.value
-        Image:
-            id: image_1
             # allow_stretch: True
             # keep_ratio: True
