--- a/kivy_ui/gameScreen.kv
+++ b/kivy_ui/gameScreen.kv
@@ -1,13 +1,16 @@
 <GameScreen>:
+    game: game
 	on_pre_enter: self.init()
     on_leave: self.end()
     canvas:
         Ellipse:
             id: ellipse
             pos: root.blob_coor[0], root.blob_coor[1]
-            size: 50,50
+            size: 25,25
             Color:
                 rgb: 1,1,1
+    FloatLayout:
+        id: game
     AnchorLayout:
     	anchor_x: 'right'
     	anchor_y: 'top'
@@ -15,3 +18,10 @@
     		size_hint: 0.2,0.05
     		text: 'Back to Menu'
     		on_release: root.manager.current = "Menu"
+    AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'top'
+        Button:
+            size_hint: 0.2,0.05
+            text: 'Clear'
+            on_release: root.clear()
